<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="Calc_calc">=</string>
    <string name="Calc_1">1</string>
    <string name="Calc_2">2</string>
    <string name="Calc_3">3</string>
    <string name="Calc_4">4</string>
    <string name="Calc_5">5</string>
    <string name="Calc_6">6</string>
    <string name="Calc_7">7</string>
    <string name="Calc_8">8</string>
    <string name="Calc_9">9</string>
    <string name="Calc_0">0</string>
    <string name="Calc_del">del</string>
    <string name="Calc_AC">AC</string>
    <string name="Calc_Times">X</string>
    <string name="Calc_Plus">+</string>
    <string name="Calc_minus">-</string>
    <string name="Calc_divide">/</string>
    <string name="Calc_dot">.</string>

</resources>
